--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == Ring 'n Bling
 
-This app is for tracking my savings progress for my wife's new wedding ring.
+This is a Rails app for tracking my savings progress for my wife's new wedding ring.
